switch to Kotlin 2.3 compile target and java 25 and remove some warnings